base/svc-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupaldb
spec:
  ports:
  - name: drupaldb
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: drupaldb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
