base/svc-site-wxt.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: site-wxt
    app.kubernetes.io/component: site-wxt
    app.kubernetes.io/instance: site-wxt
    app.kubernetes.io/name: php
    app.kubernetes.io/part-of: site-wxt-app
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: "7.2"
  name: site-wxt
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: site-wxt
    deploymentconfig: site-wxt
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
