base/route-site-wxt.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: site-wxt
    app.kubernetes.io/component: site-wxt
    app.kubernetes.io/instance: site-wxt
    app.kubernetes.io/name: php
    app.kubernetes.io/part-of: site-wxt-app
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: "7.2"
  name: site-wxt
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: site-wxt
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
